<resources>
    <string name="app_name">EventPlanner</string>
    <string name="add" />
    <string name="add_event">New Event</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cancel">Cancel</string>
    <string name="new_event">Add</string>
    <string name="event_tracker">Event Tracker</string>
    <string name="action_settings" />
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="update_event">Update Event</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Sign Out</string>
    <string name="go_back">Go back</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="title">Title (*)</string>
    <string name="description">Description</string>
    <string name="date">Date (*)</string>
    <string name="time">Time (*)</string>
    <string name="loading">Loading...</string>
    <string name="delete_event">Delete Event</string>
    <string name="notifications">Notifications</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="channel_name">upcoming event</string>
    <string name="channel_description">Enables notifs when date of event</string>
    <string name="enable_notifications">Enable Notifications</string>
</resources>