<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activities.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/varela_round"
        android:text="@string/login"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/blue"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:maxEms="40"
        android:minEms="20"
        app:errorEnabled="true"
        app:helperTextEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:maxEms="40"
        android:minEms="20"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:singleLine="true"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        app:rippleColor="@color/ripple_color_button"
        android:focusable="true"/>

    <TextView
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/varela_round"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="20sp"
        android:textStyle="bold"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:focusable="true"/>

</LinearLayout>