<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddEventActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/addEventToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:menu="@menu/add_event_app_bar">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/varela_round"
                    android:text="@string/add_event"
                    android:textSize="25sp" />
            </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxEms="60"
                android:minEms="20"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"

                    android:singleLine="true"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                app:startIconDrawable="@drawable/calendar"
                android:maxEms="60"
                android:minEms="20"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_picker"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:onClick="datePickerInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:fontFamily="@font/varela_round"

                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                app:startIconDrawable="@drawable/clock"
                android:maxEms="60"
                android:minEms="20"
                android:layout_marginBottom="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/time_picker"
                    android:clickable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:cursorVisible="false"
                    android:onClick="timePickerInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:fontFamily="@font/varela_round"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxEms="60"
                android:minEms="20">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/varela_round"

                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLength="2000"
                    android:maxLines="4"
                    android:scrollHorizontally="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>