<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity"
    android:orientation="vertical"
    android:id="@+id/linear_layout">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/changePassToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:menu="@menu/change_pass_app_bar">

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/varela_round"
                android:text="@string/change_password"
                android:textSize="25sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user_email"
        android:fontFamily="@font/varela_round"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_old_password"
                android:id="@+id/old_password_layout"
                android:maxEms="60"
                android:minEms="20"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/old_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:id="@+id/new_password_layout"
                android:maxEms="60"
                android:minEms="20"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:id="@+id/new_password_layout_confirm"
                android:maxEms="60"
                android:minEms="20"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:helperTextEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/varela_round"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>